Final working cors fix